--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- Style CSS -->
-    <link rel="stylesheet" href="../../../../maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/owl-carousel.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/lightbox.css" />
@@ -113,7 +113,7 @@
 					<p class="register-link"><i>Don't have an account?</i> <a href="#" class="register-btn">Register here</a></p>
 				</div>
 			</div>
-			
+
 			<!--  Blog Section -->
 			<section class="blog-section">
 				<div class="row">
